[gd_scene load_steps=41 format=2]

[ext_resource path="res://assets/audio/sfx/Doors/Prefabs/DoorSFXBad.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Cyndaquill/WitchHutIntiriour.png" type="Texture" id=2]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise017.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Act2/Act2.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/MinijamWizard.png" type="Texture" id=5]
[ext_resource path="res://scenes/Act2/StartEncounter.gd" type="Script" id=6]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise018.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise011.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise012.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise010.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise008.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise003.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise004.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise002.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise001.tscn" type="PackedScene" id=15]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise015.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise016.tscn" type="PackedScene" id=17]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise014.tscn" type="PackedScene" id=18]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise013.tscn" type="PackedScene" id=19]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise009.tscn" type="PackedScene" id=20]
[ext_resource path="res://assets/fonts/black-chancery/BLKCHCRY.TTF" type="DynamicFontData" id=21]
[ext_resource path="res://scenes/player/LetterSoundController.gd" type="Script" id=22]
[ext_resource path="res://scripts/player/movement.gd" type="Script" id=23]
[ext_resource path="res://scenes/dialog/PassiveDialog/PassiveDialog.gd" type="Script" id=24]
[ext_resource path="res://scenes/player/PlayerDialogController.gd" type="Script" id=25]
[ext_resource path="res://assets/sprites/MinijamPlayerucus.png" type="Texture" id=26]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise006.tscn" type="PackedScene" id=27]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise007.tscn" type="PackedScene" id=28]
[ext_resource path="res://assets/audio/sfx/VoiceLetters/Prefabs/LetterNoise005.tscn" type="PackedScene" id=29]
[ext_resource path="res://scenes/JacobTestScenes/PrototypeGame/FootstepManager.tscn" type="PackedScene" id=30]
[ext_resource path="res://scenes/dialog/SoundBox/SoundBox.tscn" type="PackedScene" id=31]
[ext_resource path="res://scenes/player/Animation/WobbleAnimationTransition.tres" type="Animation" id=32]
[ext_resource path="res://assets/sprites/MinijamPlayerc.png" type="Texture" id=33]
[ext_resource path="res://scripts/Drainable.gd" type="Script" id=34]
[ext_resource path="res://materials/DrainableMaterial.tres" type="Material" id=35]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.5, 16 )

[sub_resource type="DynamicFont" id=2]
size = 17
outline_size = 1
font_data = ExtResource( 21 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 175, 170 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 87.5, 55 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 29.75, 11.5 )

[node name="Act2" type="Node2D"]
script = ExtResource( 4 )
wizard_dialog_path = NodePath("MinijamWizard/DialogRunner")
player_dialog_path = NodePath("Player/PlayerDialogController/DialogRunner")

[node name="Background" type="ColorRect" parent="."]
margin_left = -96.0
margin_top = -118.0
margin_right = 1189.0
margin_bottom = 770.0
color = Color( 0, 0, 0, 1 )

[node name="Drained" type="Sprite" parent="."]
modulate = Color( 0.14, 0.14, 0.14, 1 )
position = Vector2( 542, 330 )
texture = ExtResource( 2 )

[node name="WitchHutIntiriour" type="Sprite" parent="."]
material = ExtResource( 35 )
position = Vector2( 542, 330 )
texture = ExtResource( 2 )
script = ExtResource( 34 )
_min_drain_time = 1.0
_max_drain_time = 3.0
_max_distance_drain = 0.0

[node name="DoorSFXBad" parent="." instance=ExtResource( 1 )]

[node name="Player" type="KinematicBody2D" parent="." groups=["player"]]
position = Vector2( 596, 300 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 23 )
move_speed = 100

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 26 )

[node name="cursed" type="Sprite" parent="Player"]
visible = false
scale = Vector2( 2.25, 2.25 )
texture = ExtResource( 33 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0.5, 0 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 0.5, 0.5 )
process_mode = 0
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 4.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
anims/WobbleAnimation = ExtResource( 32 )
anims/WobbleAnimationTransition = ExtResource( 32 )

[node name="FootstepManager" parent="Player" instance=ExtResource( 30 )]

[node name="PlayerDialogController" type="Node2D" parent="Player"]
script = ExtResource( 25 )

[node name="DialogRunner" type="Node2D" parent="Player/PlayerDialogController"]
z_index = 1
script = ExtResource( 24 )
text_lable_path = NodePath("DialogText")
dialogs = [ "A good day to finally get what I need.", "I need this power.", "Once I have this blessing I can make anything.", "The villagers must be at the market by now.", "I do need this. I do need this.", "I don't need to go this way. I need to get to the cabin...", "I'll ask nicely first.", "Surely he'll grant my wish.", "I'm almost there..." ]
letter_time = 0.1
hide_time = 3.0
random_time_min = 2.0
random_time_max = 7.0

[node name="DialogText" type="Label" parent="Player/PlayerDialogController/DialogRunner"]
margin_left = -252.0
margin_top = 20.0
margin_right = 254.0
margin_bottom = 63.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.470588, 0.439216, 0.439216, 1 )
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
autowrap = true

[node name="LetterSoundController" type="Node2D" parent="Player"]
script = ExtResource( 22 )
dialog_path = NodePath("../PlayerDialogController/DialogRunner")

[node name="LetterSoundBox" parent="Player/LetterSoundController" instance=ExtResource( 31 )]
SFX_scenes = [ ExtResource( 15 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 29 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 11 ), ExtResource( 20 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 3 ), ExtResource( 7 ) ]

[node name="walls" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="walls"]
polygon = PoolVector2Array( 402, 280, 683, 283, 683, 400, 553, 401, 555, 460, 453, 463, 454, 365, 401, 365, 394, 191, 281, 243, 420, 537, 808, 529, 787, 128, 418, 129 )

[node name="MinijamWizard" type="Sprite" parent="."]
position = Vector2( 474, 439 )
scale = Vector2( 2, 2.5 )
texture = ExtResource( 5 )

[node name="LetterSoundController" type="Node2D" parent="MinijamWizard"]
position = Vector2( 61, -55.6 )
scale = Vector2( 0.5, 0.4 )
script = ExtResource( 22 )
dialog_path = NodePath("../DialogRunner")

[node name="LetterSoundBox" parent="MinijamWizard/LetterSoundController" instance=ExtResource( 31 )]
SFX_scenes = [ ExtResource( 15 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 29 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 11 ), ExtResource( 20 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 3 ), ExtResource( 7 ) ]

[node name="DialogRunner" type="Node2D" parent="MinijamWizard"]
position = Vector2( 61, -55.6 )
scale = Vector2( 0.5, 0.4 )
z_index = 1
script = ExtResource( 24 )
text_lable_path = NodePath("DialogText")
dialogs = [ "I know what you seek.", "You cannot have it. Leave now.", "True colors cannot be controlled!", "You arrogance will be punished.", "For this I grant you...", "CURSE OF COLORS", "Hopefully this will teach you...", "Now GO!!" ]
letter_time = 0.1
hide_time = 3.0
random_time_min = 2.0
random_time_max = 7.0

[node name="DialogText" type="Label" parent="MinijamWizard/DialogRunner"]
margin_left = -374.0
margin_top = 164.0
margin_right = 132.0
margin_bottom = 207.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.470588, 0.439216, 0.439216, 1 )
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
autowrap = true

[node name="Ground" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2( 550, 329 )
shape = SubResource( 3 )

[node name="StartEncounter" type="Area2D" parent="."]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartEncounter"]
position = Vector2( 467, 419 )
shape = SubResource( 4 )

[node name="ToAct3" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ToAct3"]
position = Vector2( 596, 279 )
shape = SubResource( 5 )

[connection signal="body_entered" from="Ground" to="." method="_on_Ground_body_entered"]
[connection signal="body_entered" from="StartEncounter" to="StartEncounter" method="_on_StartEncounter_body_entered"]
[connection signal="start_encounter" from="StartEncounter" to="." method="_on_StartEncounter_start_encounter"]
[connection signal="body_entered" from="ToAct3" to="." method="_on_ToAct3_body_entered"]
